# phase

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Tiltfile
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/permissions/: legacy-storage.toml
client/src-tauri/src/: lib.rs  migration.rs  native_bridge.rs  native_engine.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/data/: oracle-subtypes.json
crates/engine/src/: starter_decks.rs
crates/engine/src/ai_support/: candidates.rs  context.rs  filter.rs  mod.rs
crates/engine/src/analysis/: ability_graph.rs  corpus.rs  corpus_tests.rs  decision_template.rs  loop_check.rs  mod.rs  resource.rs  sim.rs
crates/engine/src/database/: card_db.rs  meld_tests.rs  oracle_loader.rs  search.rs  set_gating.rs  synthesis.rs
crates/engine/src/database/forge/: effect.rs  replacement.rs  static_ab.rs
crates/engine/src/game/: ability_rw.rs  ability_scan.rs  ability_utils.rs  archenemy.rs  archenemy_tests.rs  augment.rs  augment_tests.rs  blitz.rs  blitz_tests.rs  card_subset.rs  casting.rs  casting_costs.rs  casting_targets.rs  casting_tests.rs  cipher.rs  combat.rs  combat_damage.rs  commander.rs  companion.rs  conditions.rs  contraptions.rs  cost_payability.rs  costs.rs  coverage.rs  day_night.rs  deck_loading.rs  deck_validation.rs  derived.rs  derived_views.rs  dungeon.rs  elimination.rs  engine.rs  engine_auto_pass_decision_tests.rs  engine_casting.rs  engine_combat.rs  engine_debug.rs  engine_exile_return_tests.rs  engine_keyword_action_stack_tests.rs  engine_mdfc_land_tests.rs  engine_modes.rs  (+73 more)
crates/engine/src/game/effects/: add_target_replacement.rs  additional_phase.rs  amass.rs  attach.rs  become_copy.rs  blight.rs  bolster.rs  bounce.rs  cascade.rs  cast_copy_of_card.rs  cast_from_zone.rs  change_zone.rs  choose.rs  choose_and_sacrifice_rest.rs  choose_card.rs  choose_counter_kind.rs  choose_from_zone.rs  choose_one_of.rs  (+81 more)
crates/engine/src/parser/: clause_shell.rs  mod.rs  oracle.rs  oracle_casting.rs  oracle_class.rs  oracle_classifier.rs  oracle_condition.rs  oracle_cost.rs  oracle_keyword.rs  oracle_modal.rs  oracle_quantity.rs  oracle_replacement.rs  oracle_saga.rs  oracle_separate_piles.rs  oracle_spacecraft.rs  oracle_special.rs  oracle_static.rs  oracle_target.rs  oracle_tests.rs  oracle_trigger.rs  oracle_trigger_snapshot_tests.rs  oracle_trigger_tests.rs  oracle_util.rs  oracle_vote.rs  swallow_check.rs  swallow_evidence.rs
crates/engine/src/types/: ability.rs  action_stable_order.rs  actions.rs  card_type.rs  counter.rs  definitions.rs  events.rs  format.rs  game_state.rs  identifiers.rs  interaction.rs  keywords.rs  layers.rs  mana.rs  mod.rs  proposed_event.rs  replay.rs  resolution.rs  resolved_commands.rs  statics.rs  triggers.rs
crates/engine/tests/: corrupted_resolve_counter_poisoned.rs  lead_the_stampede_reveal_visibility_2005.rs  reflexive_if_rider.rs  std_longtail_e.rs  std_small_parser_a_batch.rs
crates/engine/tests/integration/: a_killer_among_us.rs  aang_journey_partial_fail_to_find_2722.rs  aclazotz_attack_discard_multi_opponent.rs  advanced_reconstruction_regression.rs  agency_coroner_suspected_cost_paid.rs  ajani_nacatl_pariah_sacrifice_outlet_6018.rs  alchemists_gift_pump_modal_keyword_choice.rs  angelic_field_marshal_lieutenant_2885.rs  angels_grace.rs  angels_grace_2hg.rs  anya_merciless_angel_5920.rs  archon_compound_target_2344.rs  arcum_weathervane_supertype_removal.rs  armored_kincaller_or_condition.rs  ashaya_nontoken_lands.rs  ashling_delayed_sacrifice_unless_pay.rs  atarkas_command_sequential_mode_after_decline.rs  attack_qualifier_stack_conditions.rs  attacks_while_saddled_trigger.rs  aurora_awakener_reveal_until_n_permanents.rs  azors_gateway_transform_condition.rs  baleful_mastery_regression.rs  baron_helmut_zemo_boast.rs  base_pt_dynamic_set_std_base_pt.rs  battle_of_wits.rs  bbfu10_entered_this_turn_snapshot.rs  bbfu7_attacks_if_able_not_goad.rs  behold_chosen_object_power_damage.rs  birgi.rs  bishop_of_binding_where_x_exiled_card_power.rs  boneyard_parley_pile_separation.rs  boon_reflection_gain_life_drain.rs  bounce_destination_redirect.rs  bring_the_ending_corrupted_instead_branch_5683.rs  bring_to_light_converge_mana_value.rs  bring_to_light_free_cast_2880.rs  calamity_of_the_titans_reveal_cost.rs  captain_america_first_tap_msh_wave2.rs  captain_america_throw.rs  cast_during_resolution_pipeline.rs  (+383 more)
crates/phase-ai/: Cargo.toml
crates/phase-ai/baselines/: perf-baseline.json
crates/phase-ai/src/: auto_play.rs  cast_facts.rs  combat_ai.rs  config.rs  damage_reflection.rs  decision_kind.rs  determinize.rs  eval.rs  mana_colors.rs  projection.rs  search.rs  tactical_gate.rs  threat_profile.rs  tribute_eval.rs
crates/phase-ai/src/duel_suite/: harvest.rs  mod.rs  perf.rs  run.rs
crates/phase-ai/src/features/: aggro_pressure.rs  spellslinger_prowess.rs
crates/phase-ai/src/planner/: mod.rs
crates/phase-ai/src/policies/: aggro_pressure.rs  anthem_priority.rs  anti_self_harm.rs  blight_value.rs  board_wipe_telegraph.rs  card_advantage.rs  chalice_avoidance.rs  combat_tax.rs  combo_line.rs  condition_gated_activation.rs  context.rs  control_change_awareness.rs  copy_value.rs  cycling_discipline.rs  downside_awareness.rs  effect_classify.rs  effect_timing.rs  equipment_priority.rs  evasion_removal_priority.rs  fetch_land_patience.rs  free_outlet_activation.rs  hand_disruption.rs  hold_mana_up.rs  land_animation.rs  land_sequencing.rs  landfall_timing.rs  lethality_awareness.rs  life_total_resource.rs  loop_shortcut.rs  mana_efficiency.rs  mill_targeting.rs  payment_selection.rs  payoff.rs  planeswalker_loyalty.rs  plus_one_counters.rs  ramp_timing.rs  reactive_self_protection.rs  recursion_awareness.rs  redundancy_avoidance.rs  registry.rs  (+17 more)
crates/phase-ai/tests/: ai_quality.rs  decision_trace.rs  duel_suite_attribution.rs  duel_suite_harvest.rs  scenarios.rs
crates/phase-server/: Cargo.toml
crates/phase-server/src/: data_bootstrap.rs  main.rs
(+614 files in other folders)
