cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*"]
# lobby-worker/broker-wasm is a standalone wasm32 artifact (Cloudflare Worker
# Durable Object brain). Excluded so the native workspace build / Tilt clippy
# never compile it for the host target — it is built only via wasm-bindgen.
exclude = ["client/src-tauri", "lobby-worker/broker-wasm"]

[workspace.package]
version = "0.1.45"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
tracing = "0.1"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
tag-message = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-replacements = [
  { file = "../../client/package.json", search = '"version": "[^"]*"', replace = '"version": "{{version}}"' },
  { file = "../../client/src-tauri/tauri.conf.json", search = '"version": "[^"]*"', replace = '"version": "{{version}}"' },
  { file = "../../client/src-tauri/Cargo.toml", search = '^version = "[^"]*"', replace = 'version = "{{version}}"' },
]
publish = false

[profile.dev]
opt-level = 0
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"
codegen-units = 256

# The engine is compute-heavy: full-game integration tests drive thousands of
# `apply()` steps through layer evaluation and SBA sweeps. At opt-level 0 each
# game-driving test is ~10s of unoptimized engine, and the suite (150+ integration
# files) thrashes all cores. Optimizing ONLY the engine package keeps the test
# harness and other crates fast to compile while cutting per-test runtime sharply.
# `debug_assert!`s are retained (opt-level does not disable them).
#   - `dev` override: governs the engine lib when linked as a dependency of an
#     integration test (cargo builds test-target deps with the dev profile).
#   - `test` override: governs engine's inline `#[cfg(test)]` unit tests.
# opt-level 1 (not 2) is deliberate: opt-2 cold-compiles the engine for ~10+ min
# in CI, overrunning the `Rust tests` job's 15-min timeout (the opt-0 baseline is
# ~5.5 min). opt-1 skips the expensive LLVM passes (vectorization, aggressive
# inlining) so the cold compile fits the budget while still giving a large
# per-test runtime win over the opt-0 debug build.
[profile.dev.package.engine]
opt-level = 1

[profile.test.package.engine]
opt-level = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 2
codegen-backend = "llvm"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

# Native server: speed over size, unwind so tokio catches per-task panics
[profile.server-release]
inherits = "release"
opt-level = 2
panic = 'unwind'

# CLI tools (oracle-gen, coverage-report): fast compile, decent runtime
[profile.tool]
inherits = "dev"
opt-level = 1
codegen-backend = "llvm"

# Profiling: native-optimized like server-release, with debug info retained
# so samply/flamegraph attribute samples to real symbols.
# Usage: cargo build --profile profiling --bin ai-bench-state
[profile.profiling]
inherits = "server-release"
debug = "line-tables-only"
strip = false
