cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*"]
# lobby-worker/broker-wasm is a standalone wasm32 artifact (Cloudflare Worker
# Durable Object brain). Excluded so the native workspace build / Tilt clippy
# never compile it for the host target — it is built only via wasm-bindgen.
exclude = ["client/src-tauri", "lobby-worker/broker-wasm"]

[workspace.package]
version = "0.35.2"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
tracing = "0.1"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
tag-message = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-replacements = [
  { file = "../../client/package.json", search = '"version": "[^"]*"', replace = '"version": "{{version}}"' },
  { file = "../../client/src-tauri/tauri.conf.json", search = '"version": "[^"]*"', replace = '"version": "{{version}}"' },
  { file = "../../client/src-tauri/Cargo.toml", search = '^version = "[^"]*"', replace = 'version = "{{version}}"' },
  # client/src-tauri is its OWN cargo workspace, so bumping its Cargo.toml above leaves its
  # Cargo.lock pinning the previous version. The Tauri CI job builds with `cargo check --locked`,
  # which then refuses to update the lock and fails — and because tauri-check is a `needs:` of the
  # required "Rust (fmt, clippy, test, coverage-gate)" aggregator, that reds main and every
  # merge-group ref built on the release commit. v0.35.2 shipped exactly that way (fixed in #6568).
  # The two-line anchor keeps this from matching any other package's version; cargo-release's
  # default min=1 makes a lockfile format change fail the release loudly instead of silently.
  # The newline lives in a capture group, never in the replacement: the regex crate expands only
  # ${1}-style references in a replacement, so a literal \n there would be inserted verbatim and
  # would splice the two lines together.
  { file = "../../client/src-tauri/Cargo.lock", search = '(name = "phase-tauri"\nversion = )"[^"]*"', replace = '${1}"{{version}}"' },
]
publish = false

[profile.dev]
opt-level = 0
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"
codegen-units = 256

[profile.wasm-dev]
inherits = "dev"
opt-level = 2
codegen-backend = "llvm"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

# Native server: speed over size, unwind so tokio catches per-task panics.
# Overrides release's fat LTO + single codegen unit (those exist for WASM
# binary size, not native servers): they pushed the Windows release build to
# ~34 min against the 35-min CI timeout, cancelling the daily release. Thin LTO
# keeps cross-crate inlining at a fraction of the compile cost, and 16 codegen
# units parallelize the build.
[profile.server-release]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
panic = 'unwind'

# CLI tools (oracle-gen, coverage-report): fast compile, decent runtime
[profile.tool]
inherits = "dev"
opt-level = 1
codegen-backend = "llvm"

# Profiling: native-optimized like server-release, with debug info retained
# so samply/flamegraph attribute samples to real symbols.
# Usage: cargo build --profile profiling --bin ai-bench-state
[profile.profiling]
inherits = "server-release"
debug = "line-tables-only"
strip = false
