[package]
name = "phase-tauri"
version = "0.35.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-utils 2.9.2 has blanket From impls that overlap with time 0.3.48.
time = { version = "=0.3.47", features = ["parsing"] }
reqwest = { version = "0.13", default-features = false, features = ["brotli", "rustls"] }
minisign-verify = "0.2.5"
sha2 = "0.10"
semver = "1"
tauri-plugin-single-instance = "2"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["macros", "net", "sync", "io-util"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
