[package]
name = "engine"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
cli = ["tracing-subscriber"]
audit = []
forge = []
proptest = ["dep:proptest"]
# Exposes raw zone placement for test crates; never enabled by production consumers.
test-support = []
# Generates only the self-contained interaction DTO contract. Production
# consumers do not enable this feature and continue to use the existing action
# transport until the explicit adapter cutover.
interaction-bindings = ["dep:ts-rs"]
# Compiles the shared combo corpus (`analysis::corpus`) into the lib + the
# `combo-verify` tool bin, including the scenario harness it drives. Excluded
# from the default lib / WASM surface.
combo-verify = ["test-support"]

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
toml = "0.8"
proptest = { version = "1", optional = true }

nom = "8.0"
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
web-time = "1"
im = { version = "15", features = ["serde"] }
rustc-hash = "2"
smallvec = { version = "1", features = ["serde", "union"] }
ts-rs = { version = "=12.0.1", optional = true, features = ["serde-compat"] }

[[bin]]
name = "coverage-report"
path = "src/bin/coverage_report.rs"
test = false

[[bin]]
name = "set-check"
path = "src/bin/set_check.rs"

[[bin]]
name = "parser-gap-analyzer"
path = "src/bin/parser_gap_analyzer.rs"
test = false

[[bin]]
name = "oracle-gen"
path = "src/bin/oracle_gen.rs"
required-features = ["cli"]

[[bin]]
name = "rules-audit"
path = "src/bin/rules_audit.rs"
required-features = ["audit"]
test = false

[[bin]]
name = "combo-verify"
path = "src/bin/combo_verify.rs"
required-features = ["combo-verify"]
test = false

[[bin]]
name = "card-data-validate"
path = "src/bin/card_data_validate.rs"
test = false

[[bin]]
name = "interaction-bindings"
path = "src/bin/interaction_bindings.rs"
required-features = ["interaction-bindings"]
test = false

[[bin]]
name = "tokens-gen"
path = "src/bin/tokens_gen.rs"
test = false

[[bin]]
name = "coverage-parse-diff"
path = "src/bin/coverage_parse_diff.rs"
# `test = true` (default): this bin carries non-trivial diff logic with inline
# unit tests, unlike the logic-free tool bins above that set `test = false`.

[build-dependencies]
# build.rs converts data/known-tokens.toml → JSON in OUT_DIR so the runtime
# embed avoids the ~1s-per-process debug-mode toml_edit parse (see build.rs).
toml = "0.8"
serde_json = "1"

[dev-dependencies]
flate2 = "1"
engine = { path = ".", features = ["test-support"] }
tempfile = "3"
insta = { version = "1", features = ["json"] }
assert_matches = "1.5"
pretty_assertions = "1"
