[package]
name = "phase-server"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "phase-server"
path = "src/main.rs"

[dependencies]
server-core = { path = "../server-core" }
lobby-broker = { path = "../lobby-broker" }
engine = { path = "../engine" }
phase-ai = { path = "../phase-ai" }
seat-reducer = { path = "../seat-reducer" }
draft-core = { path = "../draft-core" }
rand = "0.9"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
http = "1"
minisign-verify = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "rustls-tls-webpki-roots"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = "1"
tempfile = "3"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
ngrok = { version = "0.18", optional = true }

[features]
# Embed an ngrok tunnel so self-hosters can share a join code without
# port-forwarding or TLS setup. Off by default (keeps the standard build lean);
# enable in the Docker image with `--features ngrok` + NGROK_AUTHTOKEN.
ngrok = ["dep:ngrok"]

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.29"
